# dserv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dockerfile
api/: CMakeLists.txt  dpoint_tclobj.c  dpoint_tclobj.h  dservapi.c  dservapi.h  tcl_dserv.c
db/: README  (+1 more)
extio-rw612/: CMakeLists.txt  README.md  TRANSPORT.md  prj.conf
extio-rw612/boards/: frdm_rw612.overlay  teensy40.conf  teensy40.overlay  teensy41.conf  teensy41.overlay
extio-rw612/src/: main.c
extio-rw612/src/core/: box_persist.h  dserv_ble.h  dserv_config.h
extio-rw612/src/platform/: box_ble.h  box_gpio.c  box_ptp.c  box_ptp.h  box_uplink.c  box_uplink.h  box_usbd.c
extio-rw612/tools/: box_sim.c
extio-zephyr/: CMakeLists.txt  Kconfig  PORTING.md  README.md  TRANSPORT.md  prj.conf
extio-zephyr/boards/: frdm_rw612.conf  frdm_rw612.overlay  teensy40.conf  teensy40.overlay  teensy41.conf  teensy41.overlay
extio-zephyr/src/: box_announce.c  box_announce.h  main.c
extio-zephyr/src/core/: box_ain_group.h  box_cli.h  box_clock.h  box_group.h  dserv_config.h  dserv_msg.h
extio-zephyr/src/platform/: box_ble.c  box_console.c  box_console.h  box_event.c  box_event.h  box_flash.c  box_flash.h  box_flash_sd.c  box_gpio.c  box_gpio.h  box_net_eth.c  box_net_eth.h  box_net_usb.c  box_net_usb.h  box_ptp.c  box_sched.c  box_sched.h  box_uplink.c  box_usbd.c  box_usbd.h
extio-zephyr/tools/: box_sim.c  sched_verify.sh
modules/: CMakeLists.txt
modules/ain/: CMakeLists.txt  ain.c
modules/ain/build_linuxarm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
modules/ain/src/: Mcp3204.cpp  Mcp3204.h  SPIDevice.h  ain.c  ain.cpp
modules/camera/: README.md  camera.cpp  camera.cpp~  test_continuous.tcl
modules/eventlog/: CMakeLists.txt  eventlog.c
modules/eventlog/src/: eventlog.c  eventlog.h  evt_name.h
modules/gpio_input/: CMakeLists.txt  gpio_input.c
modules/gpio_input/src/: gpio_input.c
modules/gpio_output/: CMakeLists.txt  gpio_output.c
modules/gpio_output/src/: gpio_output.c
modules/ina226/: ina226.c
modules/input/: input.c
modules/joystick4/: joystick4.c
modules/juicer/: CMakeLists.txt  juicer.c
modules/juicer/build_linuxarm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
modules/juicer/src/: juicer.c  juicer.cpp
modules/mesh/: mesh.c
modules/rmt/: CMakeLists.txt  rmt.c
modules/rmt/src/: rmt.c
modules/sound/: CMakeLists.txt  sound.c
modules/sound/src/: sound.c
modules/timer/: timer.c
modules/touch/: CMakeLists.txt  touch.c
modules/touch/src/: touch.c
modules/usb_input/: usb_input.c
modules/usbio/: usbio.c
processors/: CMakeLists.txt  Makefile  in_out.c  load_plugin.c  prmutil.c  prmutil.h  sampler.c  touch_windows.c  up_down_left_right.c  windows.c
tests/: CMakeLists.txt  datapoint_serialization.cpp  extio_dout.tcl  test_logger.tcl  test_triggers.tcl
tests/docker-package/: Dockerfile
tests/docker-packaged/: Dockerfile
tools/dgview/: CMakeLists.txt
tools/dgview/linux/: dgview.desktop
tools/dgview/macos/: Info.plist  dgview.entitlements  dgview.icns
tools/dgview/src/: DgExport.cxx  DgExport.h  DgFile.h  DgTable.cxx  DgTable.h  MacDropHandler.mm  dgview.cxx
tools/dgview/windows/: dgview.rc
tools/dpiclient/: CMakeLists.txt  dpiclient.cpp  dpiserver.py  frameinfo.json
tools/essctrl/: CMakeLists.txt  README.md
tools/essctrl/.AppleDouble/: .Parent  Makefile  essctrl.c  pkg.tcl  pkgIndex.tcl  sockapi.c  sockapi.h  socksend  socksend.c  stimctrl  stimctrl.c  stimctrl.dylib  tclstimctrl.c  testecho.c  testrmt  testrmt.c  testsock  testsock.c  testsock.map
tools/essctrl/src/: essctrl.c  sockapi.c  sockapi.h
tools/essctrl/src/linenoise-ng/: linenoise.cpp
tools/essgui/: CMakeLists.txt  README.md  essgui.nsi
tools/essgui/macos/: entrypoint  essgui.entitlements  essgui.icns  essgui.plist
tools/essgui/src/: Cgwin.hpp  DservSocket.h  EssEventTableWidget.cpp  EssEventTableWidget.h  EssguiFileDialog.h  EyeTouch.hpp  EyeTouchWin.hpp  Fl_Console.cxx  Fl_Console.h  Fl_Console.hpp  Fl_DataTable.h  Fl_DgFile.h  Fl_DgTable.h  Fl_OpBox.cxx  Fl_OpBox.cxx~  Fl_OpBox.h  Fl_OpBox.h~  Fl_OpButton.cxx  Fl_OpButton.cxx~  Fl_OpButton.h  Fl_OpButton.h~  Fl_OpConnect.h  Fl_OpConnect.h~  Fl_OpDesk.cxx  Fl_OpDesk.cxx~  Fl_OpDesk.h  Fl_OpDesk.h~  Fl_PerfTable.cxx  Fl_PerfTable.h  Fl_PerfTable.h~  MeshDiscovery.cpp  MeshDiscovery.h  MessageQueue.h  MoveableCircle.hpp  TclEditor.cxx  TclEditor.h  TclFormatter.h  TclInterp.cxx  TclInterp.h  VirtualEye.hpp  (+20 more)
tools/essgui/win/: essgui.nsi
tools/essqt/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  ConnectionManager.cpp  ConnectionManager.h  DgFile.cpp  DgFile.h  DgTableWidget.cpp  DgTableWidget.h  DockManager.cpp  DockManager.h  DservClient.cpp  DservClient.h  DservEventParser.cpp  DservListener.cpp  DservListener.h  EssClient.h  EssControlWidget.cpp  EssControlWidget.h  HostDiscoveryWidget.cpp  HostDiscoveryWidget.h  MainWindow.cpp  MainWindow.h  README.md  SystemConfigWidget.cpp  SystemConfigWidget.h  TclConsoleWidget.cpp  TclConsoleWidget.h  TclInterp.cpp  TclInterp.h  TerminalClient.cpp  TerminalClient.h  dlfuncs.c  dlfuncs.h  main.cpp  mdns.c  mdns.h  mdns_query_response.h
tools/essqt/docs/: development_plan.md  ess_project_context.md
tools/essqt/resources/: essqt.desktop
tools/essqt/src/: main.cpp
tools/essqt/src/communication/: DservClient.cpp  DservClient.h  DservEventParser.cpp  DservEventParser.h  EssClient.cpp  EssClient.h
tools/essqt/src/core/: EssApplication.cpp  EssApplication.h  EssCommandInterface.cpp  EssCommandInterface.h  EssConfig.cpp  EssConfig.h  EssDataProcessor.cpp  EssDataProcessor.h  EssEvent.h  (+2 more)
wiznet-io/pico/: CMakeLists.txt  box_ble_central.h  box_ble_periph.h  box_console.h  box_net_dual_impl.c  box_net_usb_impl.c  box_net_w6300_impl.c  box_ring.h  box_tusb_config.h  btstack_config.h  extio_pipe.gatt  pico_ain.h  pico_flash.h  pico_fuel.h  pico_gpio.h  pico_mcp3204.h  pico_oled.h  pico_ota.h  pico_ota_slot.h  pico_status_led.h  usb_descriptors.c  wizchip_dserv_config.c  wizchip_dserv_wdt.c  wizchip_udp_do.c  ws2812.pio
(+745 files in other folders)
